<resources>
    <string name="app_name">MadanayShop</string>
    <string name="welcome_text">Welcome</string>
    <string name="enter_store_text">Start ></string>
    <string name="instructions_text">Upon clicking the "START" button, a list of items will be available
    for purchase. To purchase the displayed items, You will need to click on the (+) and (-) to increase
        or decrease respectively the amount. Click the \"Checkout\" button to see your total.</string>
    <string name="thank_you_message">Thank you for using my app!</string>
    <string name="eleiko_title">Eleiko Olympic Plates</string>
    <string name="eleiko_description">Eleiko plates</string>
    <string name="decrease_button">-</string>
    <string name="barbell_description">Barbell</string>
    <string name="item_amount_text">0</string>
    <string name="increase_button">+</string>
    <string name="price_text">Price: $</string>
    <string name="subtotal_num">0.00</string>
    <string name="eleiko_price_tag">820.69</string>
    <string name="subtotal_text">Subtotal: $</string>
    <string name="barbell_price_tag">299.86</string>
    <string name="barbell_title">Ohio Power Barbell</string>
    <string name="squat_stand_title">Squat Stand</string>
    <string name="squat_rack_price_tag">349.25</string>
    <string name="squat_rack_description">Rogue Fitness Squat rack</string>
    <string name="checkout_title">Checkout</string>
    <string name="total_before_taxes_text">Total Before Taxes...................................$</string>
    <string name="gst_text">GST 5%......................................................$</string>
    <string name="qst_text">QST 9.975%..............................................$</string>
    <string name="total_text">Total................$</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="random">Random</string>
    <string name="eleiko_quantity">0</string>
    <string name="barbell_quantity">0</string>
    <string name="squat_rack_quantity">0</string>
    <string name="bench_title">Competition Bench</string>
    <string name="bench_description">Legend Fitness Competition Bench Press</string>
    <string name="bench_price">445.24</string>
    <string name="bench_quantity">0</string>
    <string name="lifting_shoes_title">Weightlifting Shoes</string>
    <string name="lifting_shoes_description">Adipower Squat Shoes</string>
    <string name="lifting_shoes_price">128.99</string>
    <string name="lifting_shoes_quantity">0</string>
    <string name="belt_title">Lifting Belt</string>
    <string name="belt_description">Rogue Fitness Weightlifting Belt</string>
    <string name="belt_price">183.12</string>
    <string name="belt_quantity">0</string>
    <string name="pullup_bar_title">Pullup Bar</string>
    <string name="pullup_bar_description">Great Pullup Bar</string>
    <string name="pullup_bar_price">56.39</string>
    <string name="pullup_bar_quantity">0</string>
    <string name="bands_title">Resistance Bands</string>
    <string name="bands_description">Assortment of Resistance bands</string>
    <string name="bands_price">45.34</string>
    <string name="bands_quantity">0</string>
    <string name="barbell_subtotal">0.00</string>
    <string name="plates_subtotal">0.00</string>
    <string name="squat_stand_subtotal">0.00</string>
    <string name="bench_subtotal">0.00</string>
    <string name="squat_shoes_subtotal">0.00</string>
    <string name="belt_subtotal">0.00</string>
    <string name="straps_subtotal">0.00</string>
    <string name="chalk_subtotal">0.00</string>
    <string name="bands_subtotal">0.00</string>
    <string name="pullup_subtotal">0.00</string>
    <string name="checkout_alert_text">Checkout</string>
    <string name="cancel_alert_text">Cancel</string>
    <string name="shipping_text">Shipping....................................................$</string>
    <string name="location_menu">Location</string>
    <string name="theme_option">Theme</string>
    <string name="sign_in_option">Sign in</string>
    <string name="language_option">Language</string>
    <string name="settings_option">Account Settings</string>
    <string name="signup_option">Sign up</string>
    <string name="sign_up_page_text">Sign Up Page</string>
</resources>

