<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MadanayNicerShop.MenuActivity">
    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location"
        android:orderInCategory="20"
        android:title="@string/location_menu"
        app:showAsAction="always" />

    <item
        android:id="@+id/sign_in"
        android:orderInCategory="10"
        android:title="@string/sign_in_option"
        app:showAsAction="always" />

    <item
        android:id="@+id/theme"
        android:orderInCategory="30"
        android:title="@string/theme_option"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/language"
        android:orderInCategory="40"
        android:title="@string/language_option"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="50"
        android:title="@string/settings_option"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_up"
        android:orderInCategory="60"
        android:title="@string/signup_option"
        app:showAsAction="never" />
</menu>
